--- a/build.xml
+++ b/build.xml
@@ -32,15 +32,19 @@
 	</target>
 	<target name="source">
 		<mkdir dir="${dist.dir}"/>
-	 <zip destfile="${dist.dir}/corner-src.zip">
-
-    <fileset dir="." >
-		<include name="src/**/*.*"/>
-		<include name="build.*"/>
-		<include name="*.xml"/>
-		<include name=".*"/>
-		<include name="support/**"/>
-	</fileset>
-  </zip>
-</target>
+		<tar destfile="${dist.dir}/corner-source-${project.version}.tar">
+			
+			<tarfileset dir=".">
+				<include name="src/**/*.*"/>
+				<include name="build.*"/>
+				<include name="doc/**"/>
+				<include name="*.xml"/>
+				<include name=".*"/>
+				<include name="support/**"/>
+			</tarfileset>
+		</tar>
+		<bzip2 src="${dist.dir}/corner-source-${project.version}.tar"
+			destfile="${dist.dir}/corner-source-${project.version}.tar.bz2"/>
+		<delete file="${dist.dir}/corner-source-${project.version}.tar"/>
+	</target>
 </project>
