git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1982 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Fri Sep 22 13:13:44 CST 2006
+#Wed Oct 11 15:24:35 CST 2006
 eclipse.preferences.version=1
 encoding//src/main/webapp/many2many/ABList.page=UTF-8
 encoding//src/main/webapp/many2many2/ABForm.page=UTF-8
@@ -6,6 +6,8 @@ encoding//src/main/webapp/many2many2/ABList.page=UTF-8
 encoding//src/main/webapp/one/AForm.page=UTF-8
 encoding//src/main/webapp/one/AList.page=UTF-8
 encoding//src/main/webapp/one2many/AForm.page=UTF-8
+encoding//src/main/webapp/one2many/AList.page=UTF-8
+encoding//src/main/webapp/one2many/BForm.page=UTF-8
 encoding//support/build.properties=UTF-8
 encoding/<project>=UTF-8
 encoding/build.properties=UTF-8
