--- a/ivy.xml
+++ b/ivy.xml
@@ -13,8 +13,8 @@
     </configurations>
 	<dependencies>
 		<dependency org="apache" name="commons-logging" rev="1.0.4" conf="runtime->*"/>
-		<dependency org="hibernate" name="hibernate" rev="3.2.0.cr4" conf="runtime->*"/>
-		<dependency org="hibernate" name="hibernate-annotations" rev="3.2.0.cr2" conf="runtime->*"/>
+		<dependency org="org.hibernate" name="hibernate" rev="3.2.0.cr5" conf="runtime->*"/>
+		<dependency org="org.hibernate" name="hibernate-annotations" rev="3.2.0.cr3" conf="runtime->*"/>
 		<dependency org="spring" name="spring" rev="1.2.8" conf="runtime->*"/>
 		
 		<dependency org="tapestry" name="tapestry-framework" rev="4.1.1-SNAPSHOT" conf="compile->*"/>
