add comment form build.xml
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2190 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,7 @@
 				value="${antlr.dir}/corner/expression/calc/calc.g"/>
 		</java>
 	</target>
+	<!-- assemble resource files -->
 	<target name="afterCompile">
 		<copy todir="${build.classes.dir}">
 			<fileset dir="${src.js.dir}">
