--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Wed Oct 11 15:24:35 CST 2006
+#Mon Dec 04 11:28:59 CST 2006
 eclipse.preferences.version=1
 encoding//src/main/webapp/many2many/ABList.page=UTF-8
 encoding//src/main/webapp/many2many2/ABForm.page=UTF-8
@@ -8,6 +8,7 @@ encoding//src/main/webapp/one/AList.page=UTF-8
 encoding//src/main/webapp/one2many/AForm.page=UTF-8
 encoding//src/main/webapp/one2many/AList.page=UTF-8
 encoding//src/main/webapp/one2many/BForm.page=UTF-8
+encoding//src/main/webapp/widget/QueryBoxTest.page=UTF-8
 encoding//support/build.properties=UTF-8
 encoding/<project>=UTF-8
 encoding/build.properties=UTF-8
