初步完成对dojo的支持
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2407 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/antlr"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" path="src/main/js"/>
+	<classpathentry excluding="dojo/*|tapestry/*" kind="src" path="src/main/js"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/java"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/resources"/>
