--- a/support/build.properties
+++ b/support/build.properties
@@ -18,6 +18,8 @@ build.classes-test.dir=${build.dir}/classes-test
 build.test.report=${build.dir}/testng-report
 build.cover.report.dir=${build.dir}/cover-report
 
+#部署文件
+deploy.dir=/home/jcai/public_html/projects/corner
 
 
 #ant支持文件
