扩展了组件的展示
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2733 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Wed Dec 20 10:03:29 CST 2006
+#Fri Mar 23 14:21:34 CST 2007
 eclipse.preferences.version=1
+encoding//src/main/java/corner/util/CornerStrings.properties=UTF-8
 encoding//src/main/webapp/many2many/ABList.page=UTF-8
 encoding//src/main/webapp/many2many2/ABForm.page=UTF-8
 encoding//src/main/webapp/many2many2/ABList.page=UTF-8
