--- a/ivy.xml
+++ b/ivy.xml
@@ -55,7 +55,7 @@
 		<dependency org="log4j" name="log4j" rev="1.2.9" conf="test->*"/>
 		<dependency org="cobertura" name="cobertura" rev="1.7" conf="test->*"/>
 		<dependency org="spring" name="spring-mock" rev="1.2.8" conf="compile->*"/>
-		<dependency org="org/openqa/selenium/server" name="selenium-server"		rev="0.8.1" conf="compile->*"/>
+ 		<dependency org="org/openqa/selenium/server" name="selenium-server"		rev="0.9.2-20070509.221241-61-standalone" conf="compile->*"/>
 		<dependency org="testng" name="testng" rev="5.0.2-jdk15" conf="compile->*"/>
 		<dependency org="easymock" name="easymock" rev="2.2" conf="test->*"/>
 		<dependency org="tapestry.javaforge" name="tapestry-testng"	rev="1.0.0-SNAPSHOT" conf="test->*"/>
