--- a/ivy.xml
+++ b/ivy.xml
@@ -13,9 +13,9 @@
     </configurations>
 	<dependencies>
 		<dependency org="apache" name="commons-logging" rev="1.0.4" conf="runtime->*"/>
-		<dependency org="org.hibernate" name="hibernate" rev="3.2.3.ga" conf="runtime->*"/>
+		<dependency org="org.hibernate" name="hibernate" rev="3.2.4.sp1" conf="runtime->*"/>
 		<dependency org="org.hibernate" name="hibernate-annotations" rev="3.2.1.ga" conf="runtime->*"/>
-		<dependency org="spring" name="spring" rev="1.2.8" conf="runtime->*"/>
+		<dependency org="spring" name="spring" rev="1.2.9" conf="runtime->*"/>
 		
 		<dependency org="tapestry" name="tapestry-framework" rev="4.1.1" conf="compile->*"/>
 		<dependency org="tapestry" name="tapestry-annotations"	rev="4.1.1" conf="compile->*"/>
