--- a/ivy.xml
+++ b/ivy.xml
@@ -17,11 +17,11 @@
 		<dependency org="org.hibernate" name="hibernate-annotations" rev="3.2.1.ga" conf="runtime->*"/>
 		<dependency org="spring" name="spring" rev="1.2.9" conf="runtime->*"/>
 		
-		<dependency org="tapestry" name="tapestry-framework" rev="4.1.1" conf="compile->*"/>
-		<dependency org="tapestry" name="tapestry-annotations"	rev="4.1.1" conf="compile->*"/>
-		<dependency org="tapestry" name="tapestry-contrib"		rev="4.1.1" conf="compile->*"/>
+		<dependency org="tapestry" name="tapestry-framework" rev="4.1.2" conf="compile->*"/>
+		<dependency org="tapestry" name="tapestry-annotations"	rev="4.1.2" conf="compile->*"/>
+		<dependency org="tapestry" name="tapestry-contrib"		rev="4.1.2" conf="compile->*"/>
 		<dependency org="backport-util-concurrent" name="backport-util-concurrent"		rev="2.2" conf="compile->*"/>
-		<dependency org="apache" name="commons-lang" rev="2.1" conf="compile->*" />
+		<dependency org="apache" name="commons-lang" rev="2.3" conf="compile->*" />
 		
 
 				<!-- poi -->
@@ -32,7 +32,7 @@
 		<dependency org="apache" name="antlr" rev="2.7.6" conf="runtime->*"/>
 		<dependency org="apache" name="hivemind" rev="1.1.1" conf="runtime->*"/>
 		<dependency org="apache" name="hivemind-lib" rev="1.1.1" conf="runtime->*"/>
-		<dependency org="ognl" name="ognl" rev="2.6.7" conf="runtime->*"/>
+		<dependency org="ognl" name="ognl" rev="2.7" conf="runtime->*"/>
 		<dependency org="oro" name="oro" rev="2.0.8" conf="runtime->*"/>
 		<dependency org="apache" name="commons-beanutils" rev="1.7.0" conf="runtime->*"/>
 		<dependency org="javax.persistence" name="ejb"	rev="3.0-public-draft-20060502" conf="runtime->*"/>
@@ -41,10 +41,11 @@
 		<dependency org="cglib" name="cglib-nodep" rev="2.1_3" conf="runtime->*"/>
 		<dependency org="apache" name="commons-collections" rev="2.1" conf="runtime->*"/>
 		<dependency org="ehcache" name="ehcache" rev="1.2" conf="runtime->*"/>
-		<dependency org="javassist" name="javassist" rev="3.0" conf="runtime->*"/>
+		<dependency org="javassist" name="javassist" rev="3.4.ga" conf="runtime->*"/>
 		<dependency org="apache" name="commons-codec" rev="1.3" conf="runtime->*"/>
-		<dependency org="apache" name="commons-io" rev="1.1" conf="runtime->*"/>
-		<dependency org="apache" name="commons-fileupload" rev="1.1.1" conf="runtime->*"/>
+		<dependency org="apache" name="commons-io" rev="1.3.1" conf="runtime->*"/>
+		<dependency org="apache" name="commons-fileupload" rev="1.2" conf="runtime->*"/>
+		<dependency org="apache" name="commons-pool" rev="1.3" conf="runtime->*" />
 		
 				
 		<dependency org="springmodules" name="springmodules-lucene"		rev="1.0-dev-20060328110632" conf="compile->*"/>
