--- a/ivy.xml
+++ b/ivy.xml
@@ -47,6 +47,9 @@
 		<dependency org="apache" name="commons-io" rev="1.3.1" conf="runtime->*"/>
 		<dependency org="apache" name="commons-fileupload" rev="1.2" conf="runtime->*"/>
 		<dependency org="apache" name="commons-pool" rev="1.3" conf="runtime->*" />
+		<!-- for itext -->
+		<dependency org="itext" name="itext" rev="2.0.1" conf="runtime->*"/>
+		<dependency org="itext" name="itextasian" rev="20060413" conf="runtime->*"/>
 		
 				
 		<dependency org="springmodules" name="springmodules-lucene"		rev="1.0-dev-20060328110632" conf="compile->*"/>
