--- a/ivy.xml
+++ b/ivy.xml
@@ -30,6 +30,11 @@
 		<dependency org="poi" name="poi-contrib" rev="3.0-rc4-20070503" conf="runtime->*"/>
 		<dependency org="poi" name="poi-scratchpad" rev="3.0-rc4-20070503" conf="runtime->*"/>
 		
+		<!-- jasperreport-->
+		<dependency org="jasperreports" name="jasperreports" rev="2.0.1.patch1" conf="runtime->*"/>
+		<dependency org="jxl" name="jxl" rev="2.6.3" conf="runtime->*"/>
+		<dependency org="apache" name="commons-digester" rev="1.8" conf="runtime->*"/>
+		
 		<dependency org="apache" name="antlr" rev="2.7.6" conf="runtime->*"/>
 		<dependency org="apache" name="hivemind" rev="1.1.1" conf="runtime->*"/>
 		<dependency org="apache" name="hivemind-lib" rev="1.1.1" conf="runtime->*"/>
