--- a/ivy.xml
+++ b/ivy.xml
@@ -17,6 +17,7 @@
 		<dependency org="org.hibernate" name="hibernate-annotations" rev="3.3.0.ga" conf="runtime->*"/>
 		<dependency org="org.hibernate" name="hibernate-commons-annotations" rev="3.3.0.ga" conf="runtime->*"/>
 		<dependency org="spring" name="spring" rev="1.2.9" conf="runtime->*"/>
+		<dependency org="guice" name="guice" rev="1.0" conf="runtime->*"/>
 		
 		<dependency org="tapestry" name="tapestry-framework" rev="4.1.3" conf="compile->*"/>
 		<dependency org="tapestry" name="tapestry-annotations"	rev="4.1.3" conf="compile->*"/>
